--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 html {
   font-size: 62.5%;
   font-family: "Roboto", sans-serif;
+  background-color: rgb(240, 240, 240);
 }
 
 li {
@@ -25,7 +26,9 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 1.5rem;
+  padding: 18px 1.5rem;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .hamburger {
@@ -46,6 +49,22 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-right: 32px;
+}
+
+.logo-class {
+  display: flex;
+}
+
+#logo-img {
+  height: 5rem;
+  margin-right: 12px;
+}
+
+#company-name {
+  margin: auto;
+  font-size: 18px;
+  color: #475569;
 }
 
 .nav-item {
@@ -53,26 +72,26 @@ a {
 }
 
 .nav-link {
-  font-size: 1.6rem;
-  font-weight: 400;
+  font-size: 18px;
   color: #475569;
 }
 
 .nav-link:hover {
-  color: #482ff7;
+  color: rgb(203, 18, 12);
+  text-decoration: overline;
 }
 
 .nav-logo {
   font-size: 2.1rem;
   font-weight: 500;
-  color: #482ff7;
+  color: rgb(203, 18, 12);
 }
 
 @media only screen and (max-width: 768px) {
   .nav-menu {
     position: fixed;
     left: -100%;
-    top: 8rem;
+    top: 11rem;
     flex-direction: column;
     background-color: #fff;
     width: 100%;
@@ -107,5 +126,35 @@ a {
   .hamburger.active .bar:nth-child(3) {
     -webkit-transform: translateY(-8px) rotate(-45deg);
     transform: translateY(-8px) rotate(-45deg);
+  }
+}
+
+.fold-content {
+  margin: 1%;
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+.fold-child {
+  display: inline-block;
+}
+
+#fold-content-image {
+  height: 400px;
+}
+
+@media only screen and (max-width: 768px) {
+  .fold-content {
+    margin: 1%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
+
+  .fold-child {
+    display: inline-block;
+  }
+
+  #fold-content-image {
+    height: 180px;
   }
 }
