--- a/styles.css
+++ b/styles.css
@@ -139,8 +139,16 @@ a {
   display: inline-block;
 }
 
-#fold-content-image {
+#fold-content-image > img {
   height: 400px;
+}
+
+#fold-content-text, #fold-content-image {
+  width: 50%;
+}
+
+#fold-content-text > #fold-content-text-p-heading {
+  width: inherit
 }
 
 @media only screen and (max-width: 768px) {
@@ -152,9 +160,41 @@ a {
 
   .fold-child {
     display: inline-block;
+    text-align: center;
   }
 
-  #fold-content-image {
-    height: 180px;
+  #fold-content-image > img {
+    height: 400px;
+    border-radius: 12px;
+    
+  }
+
+  #fold-content-text, #fold-content-image, #fold-content-scroll {
+    width: 100%;
+  }
+
+  #fold-content-text > #fold-content-text-p-heading {
+    width: inherit
+  }
+
+  #fold-content-text-p-heading {
+    font-size: 36px;
+    font-family: serif;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+  }
+
+  #fold-content-text-p-content {
+    font-size: 22px;
+    font-family: serif;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 10%;
+    color: #616161;
+  }
+  
+  #fold-content-scroll > img {
+    height: 120px;
   }
 }
