--- a/styles.css
+++ b/styles.css
@@ -131,12 +131,10 @@ a {
 
 .fold-content {
   margin: 1%;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 10%;
-}
-
-.fold-child {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
 }
 
 #fold-content-image > img {
@@ -144,11 +142,74 @@ a {
 }
 
 #fold-content-text, #fold-content-image {
-  width: 50%;
+  width: 40%;
+  text-align: center;
 }
 
 #fold-content-text > #fold-content-text-p-heading {
-  width: inherit
+  width: 100%;
+  font-size: 48px;
+}
+ 
+#fold-content-text {
+  font-family: serif;
+}
+
+#fold-content-text-p-heading {
+  padding-top: 10%;
+}
+
+#fold-content-text-p-content {
+  font-size: 20px;
+  font-family: serif;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  padding-bottom: 10%;
+  padding-top: 7.5%;
+  color: #616161;
+}
+
+#fold-content-image > img {
+  border-radius: 12px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+
+.contact-button {
+  background: #FF4742;
+  border: 1px solid #FF4742;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 12px 14px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: 60%;
+}
+
+.contact-button:hover,
+.contact-button:active {
+  background-color: initial;
+  background-position: 0 0;
+  color: #FF4742;
+}
+
+.contact-button:active {
+  opacity: .5;
 }
 
 @media only screen and (max-width: 768px) {
@@ -156,6 +217,7 @@ a {
     margin: 1%;
     padding-top: 10%;
     padding-bottom: 10%;
+    display: block;
   }
 
   .fold-child {
@@ -166,7 +228,7 @@ a {
   #fold-content-image > img {
     height: 400px;
     border-radius: 12px;
-    
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
   #fold-content-text, #fold-content-image, #fold-content-scroll {
@@ -194,7 +256,12 @@ a {
     color: #616161;
   }
   
-  #fold-content-scroll > img {
+  #fold-content-scroll {
     height: 120px;
+    display: none;
+  }
+
+  .contact-button {
+    display: none;
   }
 }
