--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,8 @@ a {
   height: 400px;
 }
 
-#fold-content-text, #fold-content-image {
+#fold-content-text,
+#fold-content-image {
   width: 40%;
   text-align: center;
 }
@@ -151,7 +152,7 @@ a {
   width: 100%;
   font-size: 48px;
 }
- 
+
 #fold-content-text {
   font-family: serif;
 }
@@ -172,20 +173,20 @@ a {
 
 #fold-content-image > img {
   border-radius: 12px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-
 .contact-button {
-  background: #FF4742;
-  border: 1px solid #FF4742;
+  background: #ff4742;
+  border: 1px solid #ff4742;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-family: nunito, roboto, proxima-nova, "proxima nova", sans-serif;
   font-size: 16px;
   font-weight: 800;
   line-height: 16px;
@@ -206,15 +207,111 @@ a {
 .contact-button:active {
   background-color: initial;
   background-position: 0 0;
-  color: #FF4742;
+  color: #ff4742;
 }
 
 .contact-button:active {
-  opacity: .5;
+  opacity: 0.5;
+}
+
+#below-fold-specialization {
+  background-color: white;
+}
+
+#below-fold-specialization-heading {
+  text-align: center;
+  font-size: 48px;
+  font-family: serif;
+  padding-top: 6%;
+}
+
+#below-fold-specialization-text {
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  grid-template-rows: auto;
+  margin-left: 5%;
+  margin-right: 5%;
+  justify-content: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.below-fold-specialization-text-li {
+  border-width: 0 1px 1px 0;
+  border-color: #ff4742;
+  border-style: dashed;
+  font-size: 24px;
+  padding: 10% 10% 5% 10%;
+  display: block;
+  text-align: center;
+}
+
+.specialization-text {
+  font-size: 24px;
+  padding-bottom: 5%;
+  font-family: serif;
+  text-align: center;
+}
+
+.specialization-icon {
+  width: 80%;
+  padding-bottom: 0%;
+}
+
+#nt_scan_id {
+  text-align: center;
+}
+
+#anomaly_scan_id {
+  text-align: center;
+}
+
+#anomaly_scan_img_id {
+  width: 45%;
+  padding-bottom: 12%;
+}
+
+#right_top_corner_tile {
+  border-right: 0px;
+}
+
+#fetal_ecg_id {
+  text-align: center;
+}
+
+#fetal_ecg_img_id {
+  width: 70%;
+  padding-bottom: 8%;
+}
+
+#fetal_doppler_id {
+  font-style: serif;
+}
+
+#fetal_doppler_img_id {
+  width: 70%;
+}
+
+#left_bottom_corner_tile,
+#middle_bottom_tile {
+  border-bottom: 0px;
+}
+
+#multi_pregnancy_img_id {
+  width: 70%;
+}
+
+#right_bottom_corner_tile {
+  border-right: 0px;
+  border-bottom: 0px;
+}
+
+#scan_3d_4d_img_id {
+  width: 65%;
+  padding-bottom: 6%;
 }
 
 @media only screen and (max-width: 768px) {
-
   .fold-content {
     margin: 1%;
     padding-top: 10%;
@@ -230,15 +327,18 @@ a {
   #fold-content-image > img {
     height: 400px;
     border-radius: 12px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
-  #fold-content-text, #fold-content-image, #fold-content-scroll {
+  #fold-content-text,
+  #fold-content-image,
+  #fold-content-scroll {
     width: 100%;
   }
 
   #fold-content-text > #fold-content-text-p-heading {
-    width: inherit
+    width: inherit;
   }
 
   #fold-content-text-p-heading {
@@ -257,7 +357,7 @@ a {
     padding-bottom: 10%;
     color: #616161;
   }
-  
+
   #fold-content-scroll {
     height: 120px;
     display: none;
