--- a/blue/styles.css
+++ b/blue/styles.css
@@ -7,7 +7,7 @@
 html {
   font-size: 62.5%;
   font-family: "Roboto", sans-serif;
-  background-color: #e9f4ff;
+  background-color: #bfdfff38;
   scroll-behavior: smooth;
 }
 
