--- a/green/styles.css
+++ b/green/styles.css
@@ -7,7 +7,7 @@
 html {
   font-size: 62.5%;
   font-family: "Roboto", sans-serif;
-  background-color: #ceffd9;
+  background-color: #ceffd991;
   scroll-behavior: smooth;
 }
 
