--- a/green/styles.css
+++ b/green/styles.css
@@ -311,6 +311,109 @@ a {
   padding-bottom: 6%;
 }
 
+#below-fold-consultation-heading {
+  text-align: center;
+  font-size: 48px;
+  font-family: serif;
+  padding-top: 6%;
+}
+
+
+#below-fold-consultation-text {
+  display: grid;
+  grid-template-columns: 32% 32% 32%;
+  grid-template-rows: auto;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  justify-content: center;
+  padding-top: 5%;
+  padding-bottom: 10%;
+}
+
+.below-fold-consultation-div {
+  margin-left: 3%;
+  margin-right: 3%;
+  background-color: #00721a;
+  color: white;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.consultation-heading {
+  font-size: 32px;
+  text-align: center;
+  font-family: serif;
+  padding-top: 7.5%;
+}
+
+.timings_list {
+  display: flex;
+  justify-content: space-between;
+  margin: 5%;
+}
+
+#mon_sat_timings_id {
+  font-size: 15px;
+  font-weight: light;
+  padding-top: 10%;
+  padding-bottom: 5%;
+  border-bottom: 0.5px white dashed;
+}
+
+#sun_timings_id {
+  font-size: 15px;
+  font-weight: light;
+  padding-bottom: 5%;
+}
+
+.consultant_list {
+  margin: 5%;
+}
+
+#consultant_tile {
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+#consultant_name_id {
+  font-size: 15px;
+  text-align: center;
+  font-weight: bold;
+  padding-top: 20%;
+  padding-bottom: 5%;
+  border-bottom: 0.5px white dashed;
+}
+
+#consultant_info_id {
+  font-size: 15px;
+  padding-top: 5%;
+  text-align: center;
+  font-weight: light;
+  padding-bottom: 5%;
+}
+
+.contact_list {
+  display: flex;
+  justify-content: space-between;
+  margin: 5%;
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+#phone_id {
+  font-size: 15px;
+  font-weight: light;
+  padding-top: 10%;
+  padding-bottom: 5%;
+  border-bottom: 0.5px white dashed;
+}
+
+#email_id {
+  font-size: 15px;
+  font-weight: light;
+  padding-bottom: 5%;
+}
+
+
 @media only screen and (max-width: 768px) {
   .fold-content {
     margin: 1%;
