--- a/blue/styles.css
+++ b/blue/styles.css
@@ -310,14 +310,12 @@ a {
   padding-bottom: 6%;
 }
 
-
 #below-fold-consultation-heading {
   text-align: center;
   font-size: 48px;
   font-family: serif;
   padding-top: 6%;
 }
-
 
 #below-fold-consultation-text {
   display: grid;
@@ -335,7 +333,8 @@ a {
   margin-right: 3%;
   background-color: #0d63b7;
   color: white;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .consultation-heading {
@@ -412,8 +411,6 @@ a {
   font-weight: light;
   padding-bottom: 5%;
 }
-
-
 
 @media only screen and (max-width: 768px) {
   .fold-content {
@@ -525,5 +522,28 @@ a {
     border-bottom: 1px;
     border-color: #1184f6;
     border-style: dashed;
+  }
+
+  #below-fold-consultation-text {
+    display: grid;
+    grid-template-columns: 80%;
+    grid-template-rows: auto;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    justify-content: center;
+    padding-top: 5%;
+    padding-bottom: 10%;
+  }
+
+  .below-fold-consultation-div {
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 10%;
+    background-color: #0d63b7;
+    color: white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   }
 }
