--- a/green/styles.css
+++ b/green/styles.css
@@ -525,4 +525,28 @@ a {
     border-color: #00721a;
     border-style: dashed;
   }
+
+
+  #below-fold-consultation-text {
+    display: grid;
+    grid-template-columns: 80%;
+    grid-template-rows: auto;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    justify-content: center;
+    padding-top: 5%;
+    padding-bottom: 10%;
+  }
+
+  .below-fold-consultation-div {
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 10%;
+    background-color: #00721a;
+    color: white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
 }
