--- a/blue/styles.css
+++ b/blue/styles.css
@@ -331,6 +331,7 @@ a {
 .below-fold-consultation-div {
   margin-left: 3%;
   margin-right: 3%;
+  border-radius: 20px;
   background-color: #0d63b7;
   color: white;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
@@ -541,6 +542,7 @@ a {
     margin-left: 3%;
     margin-right: 3%;
     margin-bottom: 10%;
+    border-radius: 20px;
     background-color: #0d63b7;
     color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
