--- a/red/styles.css
+++ b/red/styles.css
@@ -334,6 +334,7 @@ a {
 .below-fold-consultation-div {
   margin-left: 3%;
   margin-right: 3%;
+  border-radius: 20px;
   background-color: #e83b37;
   color: white;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -546,6 +547,7 @@ a {
     margin-left: 3%;
     margin-right: 3%;
     margin-bottom: 10%;
+    border-radius: 20px;
     background-color: #ff4742;
     color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
