--- a/blue/styles.css
+++ b/blue/styles.css
@@ -106,7 +106,7 @@ a {
   }
 
   .nav-item {
-    margin: 2.5rem 0;
+    margin: 0 0;
   }
 
   .hamburger {
@@ -547,5 +547,18 @@ a {
     color: white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
       rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
+
+  #burger_home, #burger_specialization, #burger_consultation {
+    padding-top: 10%;
+    padding-bottom: 10%;
+    width: 75%;
+    border-bottom: 1px #0d63b7 dashed;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  #burger_consultation {
+    border-bottom: 0px;
   }
 }
