--- a/green/styles.css
+++ b/green/styles.css
@@ -344,6 +344,8 @@ a {
   text-align: center;
   font-family: serif;
   padding-top: 7.5%;
+  border-bottom: 1px white solid;
+  padding-bottom: 5%;
 }
 
 .timings_list {
@@ -355,7 +357,7 @@ a {
 #mon_sat_timings_id {
   font-size: 15px;
   font-weight: light;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 5%;
   border-bottom: 0.5px white dashed;
 }
@@ -379,7 +381,7 @@ a {
   font-size: 15px;
   text-align: center;
   font-weight: bold;
-  padding-top: 20%;
+  padding-top: 15%;
   padding-bottom: 5%;
   border-bottom: 0.5px white dashed;
 }
@@ -389,7 +391,7 @@ a {
   padding-top: 5%;
   text-align: center;
   font-weight: light;
-  padding-bottom: 5%;
+  padding-bottom: 10%;
 }
 
 .contact_list {
@@ -403,7 +405,7 @@ a {
 #phone_id {
   font-size: 15px;
   font-weight: light;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 5%;
   border-bottom: 0.5px white dashed;
 }
@@ -563,5 +565,9 @@ a {
 
   #burger_consultation {
     border-bottom: 0px;
+  }
+
+  #consultant_name_id {
+    padding-top: 10%;
   }
 }
