--- a/blue/styles.css
+++ b/blue/styles.css
@@ -343,7 +343,7 @@ a {
   text-align: center;
   font-family: serif;
   padding-top: 7.5%;
-  border-bottom: 1px white solid;
+  border-bottom: 10px white groove;
   padding-bottom: 5%;
 }
 
@@ -566,5 +566,9 @@ a {
 
   #consultant_name_id {
     padding-top: 10%;
+  }
+
+  .consultation-heading {
+    border-bottom: 3px white solid;
   }
 }
